# mpifileutils

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  DAOS-Support.md  INSTRUCTIONS  LICENSE  Makefile.am  Makefile.in  NOTICE  README  README.md  aclocal.m4  astyle.options  autogen.sh  build.sh  builddist  buildme  buildme_autotools  buildme_dependencies  buildme_dependencies.git  buildme_dev  buildrpm  cleanme  common.mk  config.h.in  config.h.in~  configure  configure.ac  configure.scan  copy.c  copy.h  create_venv.sh  dcp.c  dtar.c  dtar.h  (+16 more)
.github/: CONTRIBUTING.md
cmake/: BLTMacros.cmake  FindCART.cmake  FindDAOS.cmake  FindDTCMP.cmake  FindGPFS.cmake  FindHDF5.cmake  FindLibArchive.cmake  FindLibArchiveLocal.cmake  FindLibAttr.cmake  FindLibCap.cmake  FindLibCircle.cmake  MFU_ADD_TOOL.cmake  SetupMPI.cmake
css/: min.css
dcmp/: .gitignore  dcmp.c  log.h
devops/: README.md  Vagrantfile  compute.yml
dfind/: Makefile  handle.c  pred.c  queue.c
doc/: .pip  .readthedocs.yaml  Makefile  Makefile.am  Makefile.in  README.md
doc/man/man1/: Makefile.am  Makefile.in  dbcast.1  dbz2.1  dchmod.1  dcmp.1  dcp.1  ddup.1  dfilemaker.1  dfind.1  dgrep.1  dparallel.1  dreln.1  drm.1  dstripe.1  dsync.1  dtar.1  dwalk.1  mpifileutils.1
dparallel/: .gitignore  AUTHORS  README.md  aclocal.m4
drm/: drm.c
dtar/: CMakeLists.txt  README  README.md  buildme  buildme_dependencies
dtest/: dtest
dwalk/: dwalk.c
experimental/: CMakeLists.txt  Makefile.am  Makefile.in
experimental/dbz2/: CMakeLists.txt  Makefile.am  README.md  common_dbz2.c  dbz2.c  dbz2.c.1  dbz2.h  dbz2_func.c  mfu_bz2.h  mfu_compress_bz2_libcircle.c  mfu_decompress_bz2_libcircle.c
experimental/dfind/: Makefile  Makefile.am  Makefile.in  common.h  dfind.c  handle.c  handle.h  pred.c  pred.h  queue.c  queue.h
experimental/dgrep/: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README.md  autogen.sh  configure.ac  dgrep.c  dgrep.h  log.h
experimental/dgrep/src/: Makefile.am  dgrep.c
experimental/dparallel/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac  dparallel.c  dparallel.h  log.h
experimental/dparallel/doc/: Doxyfile.in  Makefile.in
experimental/dparallel/doc/man/: Makefile.in
experimental/dparallel/doc/man/man1/: Makefile.am
experimental/dparallel/m4/: lx_find_doxygen.m4
experimental/dparallel/src/: log.h
experimental/dtar/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  common.c  common.h  copy.c  dtar.c  dtar.h  env.sh  handle_args.c  helper.c  helper.h  mfu_flist_archive.c
legacy-build/: buildme_dependencies  cleanme_dependencies
libbayer/: bayer.h  bayer_flist.c  bayer_flist.cpp  bayer_flist.h  bayer_io.c  bayer_io.h  bayer_param_path.c  bayer_path.c  bayer_path.h  bayer_util.c  bayer_util.h  buildme  buildme_dependencies  cleanme  cleanme_dependencies  strmap.c  strmap.h
m4/: lx_experimental.m4  lx_find_doxygen.m4  lx_find_dtcmp.m4  lx_find_gpfs.m4  lx_find_lustre.m4  lx_find_lwgrp.m4  lx_find_nose.m4  lx_find_pandoc.m4
man/: CMakeLists.txt  Makefile.am  README.md  dbcast.1  dbz2.1  dchmod.1  dcmp.1  dcp.1  ddup.1  dfilemaker.1  dfind.1  dreln.1  drm.1  dstripe.1  dsync.1  dtar.1  dwalk.1  mpifileutils.1
mpi/: buildme_autotools  buildme_mvapich  buildme_openmpi
mpiwalk/: README  bayer.h  bayer_flist.cpp  bayer_flist.h  bayer_io.c  bayer_io.h  bayer_path.c  bayer_path.h  bayer_util.c  bayer_util.h  buildme  cleanme  (+8 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  dtar.c  dtar.h  helper.c  log.h  treewalk.c
src/common/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  bayer.h  bayer_flist.c  bayer_flist.h  bayer_flist_chunk.c  bayer_flist_internal.h  bayer_flist_io.c  bayer_flist_remove.c  bayer_flist_sort.c  bayer_flist_usrgrp.c  bayer_flist_walk.c  bayer_io.c  bayer_io.h  bayer_param_path.c  bayer_param_path.h  bayer_path.c  bayer_path.h  bayer_util.c  bayer_util.h  build-common.sh  common.c  common.h  handle_args.c  handle_args.h  list.h  mfu.h  mfu_bz2.c  mfu_bz2.h  mfu_bz2_static.c  mfu_compress_bz2_libcircle.c  mfu_daos.c  mfu_daos.h  mfu_decompress_bz2_libcircle.c  mfu_errors.h  mfu_flist.c  mfu_flist.h  mfu_flist_archive.c  (+26 more)
src/daos-deserialize/: CMakeLists.txt  daos-deserialize.c
src/daos-gen/: CMakeLists.txt  daos-gen.c
src/daos-serialize/: CMakeLists.txt  daos-serialize.c
src/dbcast/: CMakeLists.txt  Makefile.am  build-dbcast.sh  dbcast.c
src/dbz2/: CMakeLists.txt  Makefile.am  README.md  dbz2.c
src/dchmod/: CMakeLists.txt  Makefile.am  build-dchmod.sh  dchmod.c
src/dcmp/: CMakeLists.txt  Makefile.am  Makefile.in  build-dcmp.sh  dcmp.c
src/dcp/: CMakeLists.txt  Makefile.am  Makefile.in  build-dcp.sh  cleanup.c  common.c  common.h  compare.c  copy.c  dcp.c  handle_args.c  handle_args.h  treewalk.c
src/dcp1/: CMakeLists.txt  Makefile.am  cleanup.c  cleanup.h  common.c  common.h  compare.c  compare.h  copy.c  copy.h  dcp1.c  dcp1.h  handle_args.c  handle_args.h  treewalk.c  treewalk.h
src/dcp2/: Makefile.am  Makefile.in  common.c  common.h  dcp.h  dcp2.c  handle_args.c  handle_args.h
src/ddup/: CMakeLists.txt  Makefile.am  ddup.c
src/dfilemaker/: CMakeLists.txt  Makefile.am  Makefile.in  dfilemaker.c  makefile  rundf
src/dfilemaker1/: CMakeLists.txt  Makefile.am  dfilemaker1.c
src/dfind/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dfind.c
src/dfmake/: Makefile.am  dfmake.c
src/dgrep/: log.h
src/dhardlink/: buildme  dhardlink.c
src/dparallel/: CMakeLists.txt  dparallel.h
src/dreln/: CMakeLists.txt  Makefile.am  dreln.c
src/drm/: CMakeLists.txt  Makefile.am  Makefile.in  build-drm.sh  drm.c
src/dsh/: CMakeLists.txt  Makefile.am  Makefile.in  dsh.c
src/dstripe/: CMakeLists.txt  Makefile.am  dstripe.c
src/dsync/: CMakeLists.txt  Makefile.am  dsync.c
src/dtar/: CMakeLists.txt  dtar.c  mfu_flist_archive.c  mfu_flist_archive.h
src/dwalk/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  build-dwalk.sh  dwalk.c
src/unit_tests/: Makefile.am  test_suite1.c  test_suite1.h  unit_tests.c
(+165 files in other folders)
