# Common library
ADD_SUBDIRECTORY(common)

# tools
ADD_SUBDIRECTORY(dbcast)
ADD_SUBDIRECTORY(dbz2)
ADD_SUBDIRECTORY(dchmod)
ADD_SUBDIRECTORY(dcmp)
ADD_SUBDIRECTORY(dcp)
ADD_SUBDIRECTORY(dcp1)
ADD_SUBDIRECTORY(ddup)
ADD_SUBDIRECTORY(dfilemaker1)
ADD_SUBDIRECTORY(dfind)
ADD_SUBDIRECTORY(dreln)
ADD_SUBDIRECTORY(drm)
ADD_SUBDIRECTORY(dstripe)
ADD_SUBDIRECTORY(dsync)
ADD_SUBDIRECTORY(dwalk)

# experimental tools
IF(ENABLE_EXPERIMENTAL)
  ADD_SUBDIRECTORY(dfilemaker)
  ADD_SUBDIRECTORY(dgrep)
  ADD_SUBDIRECTORY(dparallel)
  ADD_SUBDIRECTORY(dsh)
  ADD_SUBDIRECTORY(dtar)
ENDIF(ENABLE_EXPERIMENTAL)
