# Common library
ADD_SUBDIRECTORY(common)

# tools
ADD_SUBDIRECTORY(dbcast)
ADD_SUBDIRECTORY(dbz2)
ADD_SUBDIRECTORY(dchmod)
ADD_SUBDIRECTORY(dcmp)
ADD_SUBDIRECTORY(dcp)
ADD_SUBDIRECTORY(dcp1)
ADD_SUBDIRECTORY(ddup)
ADD_SUBDIRECTORY(dfilemaker1)
ADD_SUBDIRECTORY(dfind)
ADD_SUBDIRECTORY(dreln)
ADD_SUBDIRECTORY(drm)
ADD_SUBDIRECTORY(dstripe)
ADD_SUBDIRECTORY(dsync)
IF(ENABLE_DAOS AND ENABLE_HDF5)
  ADD_SUBDIRECTORY(daos-serialize)
  ADD_SUBDIRECTORY(daos-deserialize)
ENDIF(ENABLE_DAOS AND ENABLE_HDF5)
IF(ENABLE_LIBARCHIVE)
  ADD_SUBDIRECTORY(dtar)
ENDIF(ENABLE_LIBARCHIVE)
ADD_SUBDIRECTORY(dwalk)

# experimental tools
IF(ENABLE_EXPERIMENTAL)
  IF(ENABLE_DAOS)
    ADD_SUBDIRECTORY(daos-gen)
  ENDIF(ENABLE_DAOS)
  ADD_SUBDIRECTORY(dfilemaker)
  ADD_SUBDIRECTORY(dgrep)
  ADD_SUBDIRECTORY(dparallel)
  ADD_SUBDIRECTORY(dsh)
ENDIF(ENABLE_EXPERIMENTAL)
