#%.1: ../../markdown/%.1.md
#	pandoc -s -t man $< -o $@

dist_man1_MANS = \
  dbcast.1 \
  dchmod.1 \
  dcmp.1 \
  dcp.1 \
  drm.1 \
  dstripe.1 \
  dwalk.1

#man1_MANS = \
#  dchmod.1 \
#  dcmp.1 \
#  dcp.1 \
#  dcp1.1 \
#  dfilemaker.1 \
#  dfind.1 \
#  dgrep.1 \
#  dparallel.1 \
#  drm.1 \
#  dtar.1 \
#  dwalk.1

#EXTRA_DIST = $(man1_MANS)
